# medsiglip

./: .gitignore  CLAUDE.md  dataset.md
experiments/: AUDIT.md  DATA_CARD.md  EXPERIMENT_LOG.md  Experiment_Suggestion.md  HYPOTHESES.md  RESULTS.md  RUNBOOK.md  pyproject.toml  setup.sh  todo.md
experiments/config/: base.yaml
experiments/data/: bad_images.json  caption_builder.py  caption_builder_test.py  classify_bad.py  collator.py  collator_test.py  dataset.py  dataset_test.py  move_bad_images.sh  splits.json  splits.py  splits_test.py
experiments/models/: classifier.py  classifier_test.py  contrastive.py  contrastive_test.py
experiments/scripts/: run_phase1.sh  run_phase2.sh  validate_images.py
experiments/training/: callbacks.py  evaluate.py  train_classifier.py  train_contrastive.py
experiments/utils/: metrics.py  metrics_test.py
python/data_accessors/: requirements.in
python/data_accessors/http_image/: data_accessor.py
python/serving/: async_batch_predictor.py  model_requirements.txt  requirements.txt  server_gunicorn.py
python/serving/serving_framework/triton/: server_health_check.py  triton_server_model_runner.py
